# elohim-forge

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PREMIUM.md  README.md  SPONSORS.md  index.html  main.js  package.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: security.yml  sponsor-verify.yml
cli/: .env.example  elohim.py  pyproject.toml
cli/elohim_cli/: config.py  llm_client.py
cli/elohim_cli/backends/: __init__.py  base.py  gemini_backend.py  nim_backend.py  openai_backend.py  primax_backend.py
cli/elohim_cli/commands/: __init__.py  battle.py  factions.py  forge.py  github.py  lore.py  primax.py  shards.py  tools.py
cli/elohim_cli/engine/: battle_engine.py  shard_event.py
cli/elohim_cli/models/: arena.py  faction.py  spell.py  unit.py
cli/elohim_cli/sandbox/: sandbox.py
cli/elohim_cli/services/: supabase_service.py
cli/supabase/.temp/: linked-project.json
docs/: 01_lore_elohim_shards.md  02_factions_and_heroes.md  04_shard_events_and_nfts.md
docs/lore/: CPP.md  Go.md  Haskell.md  Hero_Lore.md  Java.md  JavaScript.md  Python.md  Rust.md  SQL.md  Shards_Lore.md  Spark.md  World_Lore.md
docs/prompts/: finish_shards_of_elohim.md
game/: LICENSE
game/web/: ATTRIBUTION.md  README.md  index.html  package-lock.json  package.json
game/web/data/: npc_voices.json
game/web/src/: main.js
src/: sponsor_check.py
