[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elohim-cli"
version = "0.1.0"
description = "Elohim — lore oracle and Super-Brain orchestrator for Code Elohim"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
elohim = "elohim_cli.commands:cli"

[tool.hatch.build.targets.wheel]
packages = ["elohim_cli"]
